relocalisation des .db et des settings prob accents crash sur des delete en sortie sans bdd

--- a/Todo.txt
+++ b/Todo.txt
@@ -2,9 +2,8 @@
 
 - Gestion TVA
 
-- Import des produits avec un fichier cvs
-
-- Export des produits avec un fichier cvs
+- Import des produits avec un fichier csv
+- Export des produits avec un fichier csv
 
 - Sous ensemble de produit
 
